# restored-hebrew-names-bible

./: .gitignore  README.md  cli.py  converter.py  example.py
kjv_restored/: INSTALL.md  QUICKSTART.md  README.md  find_python.ps1  pyproject.toml  setup.ps1
kjv_restored/data/: mini_kjv.json  overrides.example.json  sample_input.txt  sample_verses.json
kjv_restored/src/: restored_kjv_bible_modernized.docx
kjv_restored/src/kjv_restored/: __init__.py  __main__.py  assembler.py  books.py  checklist.py  cli.py  config.py  converter.py  export_docx.py  export_pdf.py  io.py  rules.py  witness.py  witness_checker.py
kjv_restored/test_out/: restored_names_kjv.docx  restored_names_kjv.report.json
kjv_restored/tests/: __init__.py  test_build_bible.py  test_checklist.py  test_converter.py  test_overrides_format.py  test_phrase_first.py  test_rules.py  test_short_names.py  test_witness.py
